# CppPractice

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-multi-platforms.yml
hangman/: CMakeLists.txt  display.cpp  game.cpp  game.hpp  main.cpp  word.cpp  word.hpp
hangman/include/: display.hpp  game.hpp  word.hpp
tests/: CMakeLists.txt
tests/test_hangman/: CMakeLists.txt  test_display.cpp  test_game.cpp  test_word.cpp
